# robot-programming

./: install-steps
robot-dance-ws/: README.md
robot-dance-ws/src/robule/: CMakeLists.txt  package.xml
robot-dance-ws/src/robule/include/robule/: motion_control.h
robot-dance-ws/src/robule/launch/: multi_map.launch  robule_nav.launch  robule_world.launch
robot-dance-ws/src/robule/src/: motion_client.cpp  motion_client.h  motion_server.cpp  motion_server.h  music_manager.cpp  nav_client.cpp
robot-dance-ws/src/robule_msgs/: CMakeLists.txt  package.xml
robot-dance-ws/src/robule_msgs/action/: Route.action
robot-dance-ws/src/simple_navigation_goals/: CMakeLists.txt  package.xml
robot-dance-ws/src/simple_navigation_goals/src/: simple_navigation_goals.cpp  turn_left.cpp
windows-ros2-instructions/: windows-ros-advanced.md  windows-ros-full-steps.md  windows-ros-simple-steps.md
windows-ros2-instructions/images/: instructions.txt
