<?xml version="1.0"?>
<package format="2">
  <name>robule_msgs</name>
  <version>0.0.0</version>
  <description>The robule_msgs package</description>
  <maintainer email="arkhive@todo.todo">arkhive</maintainer>
  <license>TODO</license>

 <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <export>
  </export>
</package>
